--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.4.1",
     "react-slick": "^0.30.2",
